fix: removed white spaces from HTML code in search and filter examples

--- a/scss/_patterns_search-and-filter.scss
+++ b/scss/_patterns_search-and-filter.scss
@@ -196,7 +196,6 @@
 
       &[aria-expanded='false'] {
         max-height: 5rem; // 2 rows of chips
-        font-size: 0;
       }
     }
 
